hphp/test/zend/good/tests/classes/bug65768.php.expectf
0 0 5 0 0 0
0 0 3 0 0 0
0 0 8 0 0 0

Fatal error: Class cdt3 contains abstract method (diff) and must therefore be declared abstract or implement the remaining methods in %s/bug65768.php on line 23
